Use the real copyright symbol gosh darn it.

--- a/README.rdoc
+++ b/README.rdoc
@@ -35,4 +35,4 @@ Run cucumber:
 
 == Copyright
 
-Copyright (c) 2009 The Dextrous Web. See LICENCE for details.
+Copyright © 2009 The Dextrous Web. See LICENCE for details.
